[package]
name = "aleo-pool-server"
version = "0.0.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#snarkvm = { path = "../../src/snarkVM" }
snarkvm = { git = "https://github.com/HarukaMa/snarkVM.git", branch = "unchecked" }
snarkvm-algorithms = { git = "https://github.com/HarukaMa/snarkVM.git", branch = "unchecked" }
#snarkos = { path = "../../src/snarkOS" }
#snarkos-storage = { path = "../../src/snarkOS/storage" }
snarkos = { git = "https://github.com/HarukaMa/snarkOS.git", branch = "custom-pool-staging" }
snarkos-storage = { git = "https://github.com/HarukaMa/snarkOS.git", branch = "custom-pool-staging"}
tracing = "0.1.35"
tracing-log = "0.1.3"
tracing-subscriber = "0.3.14"
futures = "0.3.21"
futures-util = "0.3.21"
rand = "0.8.5"
tokio-util = "0.7.3"
tokio-stream = "0.1.9"
dirs = "4.0.0"
bincode = "1.3.3"
anyhow = "1.0.58"
signal-hook = "0.3.14"
bytes = "1.1.0"
byteorder = "1.4.3"
warp = "0.3.2"
tokio-postgres = "0.7.6"
dotenv = "0.15.0"
json-rpc-types = "1.0.3"
semver = "1.0.12"
hex = "0.4.3"
rayon = "1.5.3"
num_cpus = "1.13.1"
erased-serde = "0.3.21"

[dependencies.aleo-stratum]
path = "./stratum"

[dependencies.deadpool-postgres]
version = "0.10.2"
features = ["rt_tokio_1"]

[dependencies.reqwest]
version = "0.11.11"
features = ["json"]

[dependencies.parking_lot]
version = "0.12.1"
features = ["serde"]

[dependencies.serde]
version = "1.0.138"
features = ["rc"]

[dependencies.serde_json]
version = "1.0.82"
features = ["preserve_order"]

[dependencies.tokio]
version = "1.19.2"
features = [
    "rt-multi-thread",
    "macros",
    "sync",
    "time",
]

[dependencies.rocksdb]
version = "0.18.0"
default-features = false
features = ["zstd"]

[dependencies.signal-hook-tokio]
version = "0.3.1"
features = ["futures-v0_3"]

[dependencies.clap]
version = "3.2.8"
features = ["derive"]

[profile.dev]
opt-level = 1
debug-assertions = false

[profile.release]
opt-level = 3
debug = 1
lto = "thin"
incremental = true
codegen-units = 256
