[package]
name = "aleo-pool-server"
version = "0.0.6"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
db = [
    "deadpool-postgres",
    "tokio-postgres"
]

[dependencies]
#snarkvm = { path = "../../src/snarkVM" }
#snarkvm = { git = "https://github.com/HarukaMa/snarkVM.git", branch = "unchecked" }
#snarkvm-algorithms = { git = "https://github.com/HarukaMa/snarkVM.git", branch = "unchecked" }
snarkvm = "0.9.10"
snarkvm-algorithms = "0.9.10"
snarkvm-curves = "0.9.10"
snarkvm-utilities = "0.9.10"
snarkos-account = { git = "https://github.com/AleoHQ/snarkOS.git", branch = "testnet3" }
snarkos-node-messages = { git = "https://github.com/AleoHQ/snarkOS.git", branch = "testnet3" }
tracing = "0.1.37"
tracing-log = "0.1.3"
futures = "0.3.25"
futures-util = "0.3.25"
rand = "0.8.5"
tokio-util = "0.7.4"
tokio-stream = "0.1.11"
dirs = "4.0.0"
bincode = "1.3.3"
anyhow = "1.0.66"
signal-hook = "0.3.14"
bytes = "1.3.0"
byteorder = "1.4.3"
warp = "0.3.3"
dotenv = "0.15.0"
json-rpc-types = "1.2.0"
semver = "1.0.14"
hex = "0.4.3"
rayon = "1.6.0"
num_cpus = "1.14.0"
flurry = "0.4.0"
savefile = "0.11.0"
savefile-derive = "0.11.0"

[dependencies.speedometer]
path = "./speedometer"

[dependencies.cache]
path = "./cache"

[dependencies.aleo-stratum]
path = "./stratum"

[dependencies.blake2]
version = "0.10.5"
default-features = false

[dependencies.tracing-subscriber]
version = "0.3.16"
features = ["env-filter"]

[dependencies.tokio-postgres]
version = "0.7.7"
optional = true

[dependencies.deadpool-postgres]
version = "0.10.3"
optional = true
features = ["rt_tokio_1"]

[dependencies.reqwest]
version = "0.11.13"
features = ["json"]

[dependencies.parking_lot]
version = "0.12.1"
features = ["serde"]

[dependencies.serde]
version = "1.0.149"
features = ["rc"]

[dependencies.serde_json]
version = "1.0.89"
features = ["preserve_order"]

[dependencies.tokio]
version = "1.23.0"
features = [
    "rt-multi-thread",
    "macros",
    "sync",
    "time",
    "net",
]

[dependencies.signal-hook-tokio]
version = "0.3.1"
features = ["futures-v0_3"]

[dependencies.clap]
version = "4.0.29"
features = ["derive"]

[dev-dependencies]
criterion= "0.4.0"

# testnet2 code, not updated to testnet3 so skip now
#[[bench]]
#name = "seen_nonce"
#harness = false

[profile.dev]
opt-level = 1
debug-assertions = false

[profile.release]
opt-level = 3
debug = 1
lto = "thin"
incremental = true
codegen-units = 256

[profile.bench]
opt-level = 3
debug = false
rpath = false
lto = "thin"
incremental = true
debug-assertions = false
